2013-07-31  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.cc (cmalloc): Use size_t for size field.
	(cmalloc_abort): Ditto.
	(crealloc): Ditto.
	(crealloc_abort): Ditto.
	(ccalloc): Ditto.
	(ccalloc_abort): Ditto.
	* cygheap_malloc.h (HEAP_USER): Add.
	(cmalloc): Use size_t for size field in declaration.
	(cmalloc_abort): Ditto.
	(crealloc): Ditto.
	(crealloc_abort): Ditto.
	(ccalloc): Ditto.
	(ccalloc_abort): Ditto.

2013-07-31 Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (normalize_posix_path): Don't check existence of / or // dir
	in parent dir check.

2013-07-31 Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (normalize_posix_path): Don't check existence of / or // dir
	in parent dir check.

2013-07-26  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* environ.cc (tty_is_gone): Delete.
	(known): Delete tty, add wincmdln.
	* globals.cc: Reorganize list of environment bools, remove explicit =
	false for slight load time optimization.
	(wincmdln): New global.
	* spawn.cc (child_info_spawn::worker): Honor wincmdln.

2013-07-23  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (struct _SEMAPHORE_BASIC_INFORMATION): Define.
	(enum _SEMAPHORE_INFORMATION_CLASS): Define.
	(NtQuerySemaphore): Declare.
	* thread.h (class semaphore): Add member startvalue.
	(semaphore::fixup_before_fork): New inline method.
	(semaphore::_fixup_before_fork): Declare.
	* thread.cc (MTinterface::fixup_before_fork): Additionally call
	semaphore::fixup_before_fork.
	(semaphore::semaphore): Set currentvalue to -1.  Set startvalue to
	incoming initializer value.
	(semaphore::_getvalue): Just query semaphore using NtQuerySemaphore
	rather then using WFSO/Release.
	(semaphore::_post): Drop setting currentvalue.  It's not thread-safe.
	(semaphore::_trywait): Ditto.
	(semaphore::_timedwait): Ditto.
	(semaphore::_wait): Ditto.
	(semaphore::_fixup_before_fork): New method, setting currentvalue from
	actual windows semaphore right before fork.